# algotest

./: CMakeLists.txt  LICENSE  README.md  aplusb_tests.cpp  deadline.json  doub_list_tests.cpp  dynam_arr_tests.cpp  sing_list_tests.cpp  stat_arr_tests.cpp
